--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.0.0",
     "@material-ui/core": "^4.9.4",
     "@sentry/browser": "^5.12.4",
     "@testing-library/jest-dom": "^4.2.4",
@@ -16,6 +17,8 @@
     "react-media": "^1.10.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-slick": "^0.27.10",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.0.1",
     "styled-system": "^5.1.5",
     "typescript": "^3.7.5"
@@ -28,17 +31,6 @@
     "lint:fix": "eslint src --ext .js,.jsx --fix --no-error-on-unmatched-pattern",
     "translations": "node ./translationRunner.js",
     "extract-messages": "NODE_ENV=development babel ./src  --out-file /dev/null"
-  },
-  "lint-staged": {
-    "*.{js, jsx}": [
-      "npm run lint:fix"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
   },
   "browserslist": {
     "production": [
