--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.0.1",
     "styled-system": "^5.1.5",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "@date-io/moment": "^1.3.11",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
+    "date-fns": "^2.15.0",
+    "formik": "^2.1.5",
+    "moment": "^2.27.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
