--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^1.0.0",
+    "@date-io/moment": "^1.3.11",
     "@material-ui/core": "^4.9.4",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "@sentry/browser": "^5.12.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "babel-plugin-react-intl-auto": "^3.1.0",
+    "date-fns": "^2.15.0",
+    "formik": "^2.1.5",
+    "formik-material-ui": "^3.0.0-alpha.0",
+    "moment": "^2.27.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-intl": "^3.12.0",
@@ -22,12 +29,7 @@
     "styled-components": "^5.0.1",
     "styled-system": "^5.1.5",
     "typescript": "^3.7.5",
-    "@date-io/moment": "^1.3.11",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/pickers": "^3.2.10",
-    "date-fns": "^2.15.0",
-    "formik": "^2.1.5",
-    "moment": "^2.27.0"
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
