--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "styled-components": "^5.0.1",
     "styled-system": "^5.1.5",
     "typescript": "^3.7.5",
+    "voicerecorder": "^1.0.5",
     "yup": "^0.29.3"
   },
   "scripts": {
