--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.27.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-hook-form": "^6.7.0",
     "react-intl": "^3.12.0",
     "react-intl-translations-manager": "^5.0.3",
     "react-media": "^1.10.0",
