--- a/package.json
+++ b/package.json
@@ -3,32 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.1.4",
     "@auth0/auth0-react": "^1.0.0",
+    "@date-io/date-fns": "^2.8.1",
     "@date-io/moment": "^1.3.11",
-    "@material-ui/core": "^4.9.4",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
-    "@sentry/browser": "^5.12.4",
+    "@sentry/browser": "^5.22.3",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "babel-plugin-react-intl-auto": "^3.1.0",
-    "date-fns": "^2.15.0",
+    "apollo-upload-client": "^14.1.1",
+    "babel-plugin-react-intl-auto": "^3.3.0",
+    "date-fns": "^2.16.0",
     "formik": "^2.1.5",
     "formik-material-ui": "^3.0.0-alpha.0",
+    "graphql": "^15.3.0",
     "moment": "^2.27.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-intl": "^3.12.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-intl": "^3.12.1",
     "react-intl-translations-manager": "^5.0.3",
     "react-media": "^1.10.0",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.0",
     "react-slick": "^0.27.10",
+    "react-toastify": "^6.0.8",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.0.1",
+    "styled-components": "^5.1.1",
     "styled-system": "^5.1.5",
-    "typescript": "^3.7.5",
+    "typescript": "^3.9.7",
     "voicerecorder": "^1.0.5",
     "yup": "^0.29.3"
   },
@@ -54,26 +60,26 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.7",
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.11.4",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
-    "@typescript-eslint/parser": "^2.19.2",
-    "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-react-intl": "^6.0.1",
+    "@typescript-eslint/parser": "^2.34.0",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-react-intl": "^6.2.0",
     "customize-cra": "^0.9.1",
-    "customize-cra-react-refresh": "^1.0.1",
+    "customize-cra-react-refresh": "^1.1.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-config-react-app": "^5.2.0",
-    "eslint-loader": "^3.0.3",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.18.3",
-    "husky": "^4.2.3",
-    "lint-staged": "^10.0.7",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-loader": "^3.0.4",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.6",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.13",
     "prettier": "^1.19.1",
-    "react-app-rewired": "^2.1.5"
+    "react-app-rewired": "^2.1.6"
   }
 }
