--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@auth0/auth0-react": "^1.0.0",
     "@date-io/date-fns": "^2.8.1",
     "@date-io/moment": "^1.3.11",
+    "@hookform/resolvers": "^0.1.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -24,6 +25,7 @@
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.7.0",
     "react-intl": "^3.12.1",
     "react-intl-translations-manager": "^5.0.3",
     "react-media": "^1.10.0",
