--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "formik": "^2.1.5",
     "formik-material-ui": "^3.0.0-alpha.0",
     "graphql": "^15.3.0",
+    "howler": "^2.2.0",
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
