--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "babel-plugin-react-intl": "^6.2.0",
     "customize-cra": "^0.9.1",
     "customize-cra-react-refresh": "^1.1.0",
+    "cypress": "^5.1.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-react-app": "^5.2.1",
