--- a/package.json
+++ b/package.json
@@ -49,7 +49,10 @@
     "lint": "eslint src --ext .js,.jsx",
     "lint:fix": "eslint src --ext .js,.jsx --fix --no-error-on-unmatched-pattern",
     "translations": "node ./translationRunner.js",
-    "extract-messages": "NODE_ENV=development babel ./src  --out-file /dev/null"
+    "extract-messages": "NODE_ENV=development babel ./src  --out-file /dev/null",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "cypress:verify": "cypress verify"
   },
   "browserslist": {
     "production": [
@@ -75,6 +78,7 @@
     "customize-cra": "^0.9.1",
     "customize-cra-react-refresh": "^1.1.0",
     "cypress": "^5.1.0",
+    "cypress-react-unit-test": "^4.11.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-react-app": "^5.2.1",
