--- a/package.json
+++ b/package.json
@@ -17,18 +17,17 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "apollo-upload-client": "^14.1.1",
-    "babel-plugin-react-intl-auto": "^3.3.0",
     "date-fns": "^2.16.1",
     "formik": "^2.1.5",
     "formik-material-ui": "^3.0.0-alpha.0",
     "graphql": "^15.3.0",
+    "i18next": "^19.7.0",
     "howler": "^2.2.0",
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.7.2",
-    "react-intl": "^3.12.1",
-    "react-intl-translations-manager": "^5.0.3",
+    "react-i18next": "^11.7.0",
     "react-media": "^1.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.0",
@@ -74,7 +73,6 @@
     "@typescript-eslint/parser": "^2.34.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
-    "babel-plugin-react-intl": "^6.2.0",
     "customize-cra": "^0.9.1",
     "customize-cra-react-refresh": "^1.1.0",
     "cypress": "^5.1.0",
