--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "formik-material-ui": "^3.0.0-alpha.0",
     "graphql": "^15.3.0",
     "howler": "^2.2.0",
+    "i18next": "^19.7.0",
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.7.2",
+    "react-i18next": "^11.7.2",
     "react-intl": "^3.12.1",
     "react-intl-translations-manager": "^5.0.3",
     "react-media": "^1.10.0",
