--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,9 +6,9 @@ tasks:
       touch /tmp/.npm-lock
       npm install
       rm /tmp/.npm-lock
-    command: npm run dev
+    command: npm run start
   - init: sleep 1 && while [ -f /tmp/.npm-lock ]; do sleep 1; done
-    command: npm run cy:open
+    command: npm run cypress:open
 ports:
   - port: 5900
     onOpen: ignore
