--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,7 @@
   "extends": [
     "react-app",
     "plugin:prettier/recommended",
-    "prettier/react"
+    "prettier/react", "plugin:cypress/recommended"
   ],
 
   "rules": {
